# rix-lang-lalrpop

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  main.rix  rule110.rix  test.rix
src/: grammar.lalrpop  interpreter.rs  llvm.rs  main.rs  resolver.rs  strings.rs
src/ast/: debug.rs  expr.rs  instr.rs  item.rs  mod.rs  typ.rs
src/interpreter/: mod.rs  scope.rs
src/ir/: mod.rs
src/lexer/: mod.rs
src/llvm/: mod.rs
src/resolver/: annotations.rs  mod.rs  resource.rs  scope.rs  typ.rs
