[package]
name = "rix-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
codespan-reporting = "0.13.1"
clap = { version = "4.5.51", features = ["derive"] }

[build-dependencies]
lalrpop = "0.22.2"
